# renewal

./: .gitattributes  .gitignore  LICENSE  README.md  facebook_mobility.ipynb  pixi.toml  postBuild  pyproject.toml  requirements.txt
code/: README.md  pyproject.toml
emu_renewal/: calibration.py  distributions.py  evidence.bib  inputs.py  inputs.yml  outputs.py  plotting.py  priors.yml  renew.py  targets.py  utils.py
grafting/: grafting_graph_model.ipynb  grafting_trial.ipynb
input_notebooks/: aus_hosps.ipynb  aus_mobility.ipynb  aus_variants.ipynb  eurostat_subnat_population.ipynb  examine_vars.ipynb  explore_owid_indicators.ipynb  facebook_mobility.ipynb  facebook_mobility_gadm_polars.ipynb  google_mobility.ipynb  gridded_population.ipynb  mobility.ipynb  population.ipynb  seroprev.ipynb  sync.ipynb  variants.ipynb  worldbank_subnat_pop.ipynb
notebooks/: 01-introduction.ipynb  01-prepare-to-run.ipynb  01-select-countries.ipynb  01a-new-select-countries.ipynb  01b-prepare-hosps.ipynb  01c-prepare-vars.ipynb  02-prepare-australia.ipynb  02-prepare-individual-countries.ipynb  02-run-and-store.ipynb  03-analysis-single-run.ipynb  03-covid-malaysia.ipynb  03-prepare-all-countries.ipynb  04-report-priors.ipynb  04-sars-hongkong.ipynb  05-compare-fits.ipynb  05-ebola-serraleone.ipynb  05-run-and-store.ipynb  05b-run-and-store-single-country.ipynb  06-analysis-single-run.ipynb  06-compare-process-by-mob.ipynb  06-covid-malaysia-doc.ipynb  07-compare-fits.ipynb  07-compare-process-multicountry.ipynb  07-covid-aus.ipynb  08-compare-proc-mob.ipynb  08-select-countries.ipynb  (+50 more)
(+633 files in other folders)
