[tool.poetry]
name = "emu_renewal"
version = "0.1"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "https://github.com/monash-emu/renewal"
repository = "https://github.com/monash-emu/renewal"
documentation = "https://github.com/monash-emu/renewal"
keywords = [
    "covid19",
]
description = "Renewal model implementationb"
authors = [
    "James Trauer <james.trauer@monash.edu>",
    "David Shipman <david.shipman@monash.edu>",
    "Angus Hughes <angus.hughes@monash.edu>",
    "Romain Ragonnet <romain.ragonnet@monash.edu>",
]
packages = [
    {include = "emu_renewal"}
]

[tool.poetry.dependencies]
python = ">=3.8.0, <4.0.0"
estival = "==0.5.1"
kaleido = {version = "==0.2.1", optional = true}
summerepi2 = ">=1.3.0"
numpyro = ">=0.13.0"
jax = "<=0.4.24"

[tool.poetry.extras]
full = ["kaleido"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
